# LongVue-OSI

./: README.md  data.db  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: osint_data.csv  osint_data.json
src/longvue_osi/: database.py  main.py  scraper.py  selenium_crawler.py
src/longvue_osi.egg-info/: PKG-INFO  SOURCES.txt
src/longvue_osi/dashboard_analysis/: dashboard_analysis_2.json  dashboard_analysis_5.json  dynamic_rsi_2.json  dynamic_rsi_5.json  sentiment_analysis_2.json  sentiment_analysis_5.json  sentiment_history_2.json  sentiment_history_5.json
tests/: test_database.py  test_scraper.py  test_selenium.py
tests/unit/: test_demo.py
