[project]
name = "longvue_osi"
version = "0.1.0"
description = "OSINT Web Scraping Tool in TDD"
requires-python = ">=3.11"
dependencies = []  # Empty, or add other real deps like "requests" if needed latern

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
explicit_package_bases = true
ignore_missing_imports = true
